force-app/main/default/objects/CPQ_Assessment__c/fields/Prod_CurrentExtProductCount__c.field-meta.xml
<CustomField>
    <fullName>Prod_CurrentExtProductCount__c</fullName>
    <inlineHelpText>Approximate number of products that are not yet loaded to Salesforce but will need to be added as a result of this project.</inlineHelpText>
    <label># of Products to be Added to Salesforce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>