force-app/main/default/objects/CPQ_Assessment__c/fields/Prod_CurrentProductCount__c.field-meta.xml
<CustomField>
    <fullName>Prod_CurrentProductCount__c</fullName>
    <inlineHelpText>Approximate number of products in the Saleforce standard Product2 object.</inlineHelpText>
    <label>Number of Products in Salesforce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>