force-app/main/default/objects/CPQ_Assessment__c/fields/Prod_DocUploaded__c.field-meta.xml
<CustomField>
    <fullName>Prod_DocUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check after uploading product documentation on the final screen.</inlineHelpText>
    <label>Product Documentation Uploaded</label>
    <type>Checkbox</type>
</CustomField>