force-app/main/default/objects/CPQ_Assessment__c/fields/Prod_Webpage__c.field-meta.xml
<CustomField>
    <fullName>Prod_Webpage__c</fullName>
    <inlineHelpText>If your company website has a good overview of your products, please include a link.</inlineHelpText>
    <label>Web Page Showing Your Product Offerings</label>
    <type>Url</type>
</CustomField>