force-app/main/default/objects/CPQ_Assessment__c/fields/Salesforce_Process__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Process__c</fullName>
    <inlineHelpText>Please describe how accurately your desired current or future state process is managed within your existing implementation of Salesforce. Please provide examples of any major gaps.</inlineHelpText>
    <label>Salesforce Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>