force-app/main/default/objects/CPQ_Assessment__c/fields/SubscriptionsandAssets__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionsandAssets__c</fullName>
    <inlineHelpText>Do you need to systematically store subscriptions and/or service contracts (products that you sell that have effective dates)?  
Do you sell equipment or other serialized assets that need to be tracked after the sale?</inlineHelpText>
    <label>Subscriptions and Assets</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>