force-app/main/default/objects/CPQ_Assessment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>